; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/net/sched/extr_sch_cbq.c_cbq_addprio.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/net/sched/extr_sch_cbq.c_cbq_addprio.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.cbq_sched_data = type { i32*, i32* }
%struct.cbq_class = type { i64, i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.cbq_sched_data*, %struct.cbq_class*)* @cbq_addprio to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @cbq_addprio(%struct.cbq_sched_data* %0, %struct.cbq_class* %1) #0 {
  %3 = alloca %struct.cbq_sched_data*, align 8
  %4 = alloca %struct.cbq_class*, align 8
  store %struct.cbq_sched_data* %0, %struct.cbq_sched_data** %3, align 8
  store %struct.cbq_class* %1, %struct.cbq_class** %4, align 8
  %5 = load %struct.cbq_sched_data*, %struct.cbq_sched_data** %3, align 8
  %6 = getelementptr inbounds %struct.cbq_sched_data, %struct.cbq_sched_data* %5, i32 0, i32 1
  %7 = load i32*, i32** %6, align 8
  %8 = load %struct.cbq_class*, %struct.cbq_class** %4, align 8
  %9 = getelementptr inbounds %struct.cbq_class, %struct.cbq_class* %8, i32 0, i32 0
  %10 = load i64, i64* %9, align 8
  %11 = getelementptr inbounds i32, i32* %7, i64 %10
  %12 = load i32, i32* %11, align 4
  %13 = add nsw i32 %12, 1
  store i32 %13, i32* %11, align 4
  %14 = load %struct.cbq_class*, %struct.cbq_class** %4, align 8
  %15 = getelementptr inbounds %struct.cbq_class, %struct.cbq_class* %14, i32 0, i32 1
  %16 = load i64, i64* %15, align 8
  %17 = load %struct.cbq_sched_data*, %struct.cbq_sched_data** %3, align 8
  %18 = getelementptr inbounds %struct.cbq_sched_data, %struct.cbq_sched_data* %17, i32 0, i32 0
  %19 = load i32*, i32** %18, align 8
  %20 = load %struct.cbq_class*, %struct.cbq_class** %4, align 8
  %21 = getelementptr inbounds %struct.cbq_class, %struct.cbq_class* %20, i32 0, i32 0
  %22 = load i64, i64* %21, align 8
  %23 = getelementptr inbounds i32, i32* %19, i64 %22
  %24 = load i32, i32* %23, align 4
  %25 = sext i32 %24 to i64
  %26 = add nsw i64 %25, %16
  %27 = trunc i64 %26 to i32
  store i32 %27, i32* %23, align 4
  %28 = load %struct.cbq_sched_data*, %struct.cbq_sched_data** %3, align 8
  %29 = load %struct.cbq_class*, %struct.cbq_class** %4, align 8
  %30 = getelementptr inbounds %struct.cbq_class, %struct.cbq_class* %29, i32 0, i32 0
  %31 = load i64, i64* %30, align 8
  %32 = call i32 @cbq_normalize_quanta(%struct.cbq_sched_data* %28, i64 %31)
  ret void
}

declare dso_local i32 @cbq_normalize_quanta(%struct.cbq_sched_data*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
